# edge-voice

./: .gitignore  .pre-commit-config.yaml  Makefile  Modelfile  README.md  pyproject.toml  remove_dumped_audio.py  requirements-dev.in  requirements-dev.txt
.github/workflows/: ci.yml
configs/: default.yaml
deploy/: edge-voice.service
docs/: ARCHITECTURE.md  BUILDPLAN.md  design.md
scratch/: demo_supervisor.py  silero_moonshine.py
src/edge_voice/: cli.py  main.py
src/edge_voice/audio_ingest/: atomic_write.py  audio_dump.py  mqtt_client.py  mqtt_client_old.py  segment_audio_dump.py  wav_to_mqtt.py
src/edge_voice/channel/: router.py
src/edge_voice/config/: settings.py
src/edge_voice/pipeline/: __init__.py  fake_workers.py  fanout.py  models.py  orchestrator.py  packet_copier.py  packet_tracker.py  queue_copier.py  queues.py  segment_copier.py  supervisor.py  systemd_watchdog.py  transcript_hub.py
src/edge_voice/stt/: stt_worker.py
src/edge_voice/utils/audio_generation/: fake_source.py  mic_source.py  wav_source.py  wav_source_2ch.py  wav_source_raw.py
src/edge_voice/vad/: vad_worker.py
src/edge_voice/webui/: app.py
src/edge_voice/webui/templates/: console.html
tests/: test_atomic_write.py  test_audio_dump.py  test_models.py  test_mqtt_client.py  test_orchestrator.py  test_pipeline_integration.py  test_queue_copier.py  test_router.py  test_settings.py  test_supervisor.py  test_systemd_watchdog.py  test_transcript_hub.py  test_vad.py  test_wav_source.py  test_webui_app.py
tools/audio_generation/: fake_source.py
